--- a/BandTracker/Views/Home/BandDetail.cshtml
+++ b/BandTracker/Views/Home/BandDetail.cshtml
@@ -3,16 +3,16 @@
 }
 <div class="container">
   <h1>Band Tracker</h1>
-<h2>Venues:</h2>
+<h2>Bands:</h2>
 @if (Model.Count != 0)
 {
   <ul>
-    @foreach (var venue in Model)
+    @foreach (var band in Model)
     {
-      <li><a href="/venues/@venue.Id">@venue.Name</a></li>
+      <li><a href="/bands/@band.Id">@band.Name</a></li>
     }
   </ul>
 }
-<h4><a href="/venues/new">Add a new venue</a></h4>
+<h4><a href="/bands/new">Add a new </a></h4>
 <h4><a href="/">Return home</a></h4>
 </div>
