--- a/BandTracker/Views/Home/VenueDetail.cshtml
+++ b/BandTracker/Views/Home/VenueDetail.cshtml
@@ -7,9 +7,9 @@
 @if (Model.Count != 0)
 {
   <ul>
-    @foreach (var category in Model)
+    @foreach (var venue in Model)
     {
-      <li><a href="/venues/@venue.Id">@venue.Name</a></li>
+      <li><a href='/venues/venue.Id'>@venue.Name</a></li>
     }
   </ul>
 }
