--- a/BandTracker/Views/Home/Index.cshtml
+++ b/BandTracker/Views/Home/Index.cshtml
@@ -5,6 +5,15 @@
   <div class="jumbotron">
       <h1>Band Tracker!</h1>
   </div>
+    <h4>Current Bands:</h4>
+      @if(Model.Count == 0)
+      {
+        <h3>No bands added yet</h3>
+      }
+      @foreach(var band in Model)
+      {
+        <p><a href="/bands/@band.Id">@band.Name</a></p>
+      }
   <h4><a href="/venues">View Venues</a></h4>
   <h4><a href="/bands">View Bands</a></h4>
 </div>
