--- a/BandTracker/Views/Home/VenueDetail.cshtml
+++ b/BandTracker/Views/Home/VenueDetail.cshtml
@@ -1,18 +1,24 @@
 @{
   Layout = "_Layout";
 }
+@using BandTracker.Models;
 <div class="container">
   <h1>Band Tracker</h1>
 <h2>Venues:</h2>
-@if (Model.Count != 0)
+<p>@Model["venue"].Name</p>
+<p>@Model["venue"].Address</p>
+<br></br>
+<p>Bands played:</p>
+
+@if (@Model["venueBands"].Count != 0)
 {
-  <ul>
-    @foreach (var venue in Model)
+    @foreach (var band in @Model["venueBands"])
     {
-      <li><a href='/venues/venue.Id'>@venue.Name</a></li>
+      <p>@band.Name</p>
+      <p>@band.Genre</p>
     }
-  </ul>
 }
+<h4><a href='/venues/@Model["venue"].Id/bands/new'>Add a new band</a>
 <h4><a href="/venues/new">Add a new venue</a></h4>
 <h4><a href="/">Return home</a></h4>
 </div>
