--- a/BandTracker/Views/Home/VenueForm.cshtml
+++ b/BandTracker/Views/Home/VenueForm.cshtml
@@ -1,13 +1,13 @@
 @{
     Layout = "_Layout";
 }
-<h1>To Do List</h1>
+<h1>Band Tracker!</h1>
 <h2>Add new venue</h2>
 <form action="/venues/new" method="post">
   <label for="venue-name">Venue name:</label>
   <input id="venue-name" name="venue-name" type="text">
   <label for="venue-address">Venue address:</label>
-  <input id="venue-address" address="venue-address" type="text">
+  <input id="venue-address" name="venue-address" type="text">
   <button type="submit">Add</button>
 </form>
 <h4><a href="/">Return home</a></h4>
