completely redesign home contoller views, update update method and place it in homecontroller route to update venues.

--- a/BandTracker/Views/Home/Index.cshtml
+++ b/BandTracker/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
       {
         <p><a href="/bands/@band.Id">@band.Name</a></p>
       }
+  <br></br>
   <h4><a href="/venues">View Venues</a></h4>
+  <h4><a href="/venues/new">Add a new venue</a></h4>
+  <br></br>
   <h4><a href="/bands">View Bands</a></h4>
+  <h4><a href="/bands/new">Add a new band</a></h4>
 </div>
