--- a/BandTracker/Views/Home/VenueForm.cshtml
+++ b/BandTracker/Views/Home/VenueForm.cshtml
@@ -6,7 +6,7 @@
 <form action="/venues/new" method="post">
   <label for="venue-name">Venue name:</label>
   <input id="venue-name" name="venue-name" type="text">
-  <label for="venue-address">Venue address:</label>
+  <label for="venue-address">Venue City and State:</label>
   <input id="venue-address" name="venue-address" type="text">
   <button type="submit">Add</button>
 </form>
