--- a/BandTracker/Views/Home/BandDetail.cshtml
+++ b/BandTracker/Views/Home/BandDetail.cshtml
@@ -2,17 +2,35 @@
   Layout = "_Layout";
 }
 <div class="container">
-  <h1>Band Tracker</h1>
-<h2>Bands:</h2>
-@if (Model.Count != 0)
-{
+<h1>Band Details:</h1>
+<br></br>
+<h4>Name: @Model["band"].Name</h4>
+<h4>Genre: @Model["band"].Genre</h4>
+<br></br>
+<h4>Venues Played:</h4>
   <ul>
-    @foreach (var band in Model)
+    @foreach (var venue in @Model["bandVenues"])
     {
-      <li><a href="/bands/@band.Id">@band.Name</a></li>
+      <li>@venue.Name</li>
     }
   </ul>
-}
-<h4><a href="/bands/new">Add a new </a></h4>
+
+<br></br>
+<h4>Add a venue this band has played at:</h4>
+<form action='/bands/@Model["band"].Id/venues/new') method='post'>
+  <label for='venue-id'>Select a venue</label>
+  <select id='venue-id' name='venue-id' type='text'>
+    @foreach (var venue in @Model["allVenues"])
+    {
+      <option value='@venue.Id'>@venue.Name</option>
+    }
+  </select>
+  <button type='submit'>Add</button>
+</form>
+<br></br>
+
+
+<h4><a href="/bands/new">Add a new band</a></h4>
+<h4><a href="/venues/new">Add a new venue</a></h4>
 <h4><a href="/">Return home</a></h4>
 </div>
