--- a/BandTracker/Views/Home/VenueDetail.cshtml
+++ b/BandTracker/Views/Home/VenueDetail.cshtml
@@ -1,24 +1,32 @@
 @{
   Layout = "_Layout";
 }
-@using BandTracker.Models;
+
 <div class="container">
   <h1>Band Tracker</h1>
-<h2>Venues:</h2>
-<p>@Model["venue"].Name</p>
-<p>@Model["venue"].Address</p>
+<h2>Venue:</h2>
+<p>Venue Name: @Model["venue"].Name</p>
+<p>Venue Location: @Model["venue"].Address</p>
+<h4><a href='/venues/@Model["venue"].Id/update'>Update Venue</a></h4>
 <br></br>
 <p>Bands played:</p>
+  @foreach (var band in @Model["venueBands"])
+  {
+    <p>@band.Name</p>
+    <p>@band.Genre</p>
+  }
 
-@if (@Model["venueBands"].Count != 0)
-{
-    @foreach (var band in @Model["venueBands"])
-    {
-      <p>@band.Name</p>
-      <p>@band.Genre</p>
-    }
-}
-<h4><a href='/venues/@Model["venue"].Id/bands/new'>Add a new band</a>
-<h4><a href="/venues/new">Add a new venue</a></h4>
+  <h4>Add a band to this Venue:</h4>
+  <form action='/venues/@Model["venue"].Id/tasks/new' method='post'>
+    <label for='band-id'>Select a band</label>
+    <select id='band-id' name='band-id' type='text'>
+      @foreach (var band in @Model["bands"])
+      {
+        <option value='@band.Id'>@band.Name</option>
+      }
+    </select>
+    <button type='submit'>Add</button>
+  </form>
+
 <h4><a href="/">Return home</a></h4>
 </div>
