--- a/BandTracker/Views/Home/Success.cshtml
+++ b/BandTracker/Views/Home/Success.cshtml
@@ -1,5 +1,5 @@
 @{
     Layout = "_Layout";
 }
-<h3>Your data has been recorded or Updated!</h3>
+<h3>Your data has been added, updated, or deleted!</h3>
 <p><a href="/">Return Home</a></p>
