--- a/BandTracker/Views/Home/VenueDetail.cshtml
+++ b/BandTracker/Views/Home/VenueDetail.cshtml
@@ -18,7 +18,7 @@
   }
 
   <h4>Add a band to this Venue:</h4>
-  <form action='/venues/@Model["venue"].Id/tasks/new' method='post'>
+  <form action='/venues/@Model["venue"].Id/bands/new' method='post'>
     <label for='band-id'>Select a band</label>
     <select id='band-id' name='band-id' type='text'>
       @foreach (var band in @Model["bands"])
